<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/view_cars"
            android:title="@string/view_cars" />
    </group>
    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/search_cars"
            android:icon="@drawable/search_cars"
            android:title="@string/search_cars" />
    </group>
    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/share"
            android:icon="@drawable/share"
            android:title="@string/share" />
    </group>
    <group
        android:id="@+id/grp4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/my_profile" />
    </group>
    <group
        android:id="@+id/grp5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/about"
            android:icon="@drawable/info"
            android:title="@string/about_us"/>
    </group>
    <group
        android:id="@+id/grp6"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/sign_out"
            android:title="@string/sign_out"/>
    </group>
</menu>
